# AttestationCheck

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test-lint.yaml
attestationcheck/: __init__.py  __main__.py  packageinforesolver.py  session.py  verify_attestation.py
attestationcheck/io/: cli.py  fmt.py
attestationcheck/models/: attestation.py  config.py  packageinfo.py  pypijson.py
documentation/reference/: README.md
documentation/reference/attestationcheck/: index.md  module.md  packageinforesolver.md  session.md  verify_attestation.md
documentation/reference/attestationcheck/io/: cli.md  fmt.md  index.md
documentation/reference/attestationcheck/models/: attestation.md  config.md  defaultonnone.md  index.md  packageinfo.md  pypijson.md
tests/: test_packageinfo.py
tests/io/: test_formatter.py
tests/io/data/fmt/: advanced.ansi  advanced.csv  advanced.json  advanced.md  advanced.txt  advanced_ignore_params2.json  simple.ansi  simple.csv  simple.json  simple.md  simple.txt
