[project]
name = "attestationcheck"
version = "0.2.1"
description = "Output the attestation status used by dependencies. e.g. Verified, Valid, Supported by package host etc."
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.12"
readme = "README.md"
license = "mit"
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
]
dependencies = [
	"configurator>=3.2.0",
	"depgather>=0.5.0",
	"markdown>=3.10.2",
	"platformdirs>=4.10.0",
	"pydantic>=2.13.4",
	"pypi-attestations>=0.0.29",
	"requests>=2.32.5",
	"requests-cache>=1.3.2",
	"rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/AttestationCheck"
Repository = "https://github.com/FHPythonUtils/AttestationCheck"
Documentation = "https://github.com/FHPythonUtils/AttestationCheck/blob/master/README.md"

[project.scripts]
attestationcheck = "attestationcheck:cli"

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812", # enforce trailing comma
	"D203",     # 
	"D212",     #  
	"D206",     # i want tabs 
	"D401",     # imperative mood
	"D1",     # temporarily ignore docstrings
	"ISC001",
	"N",      # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",    # type check blocks
	"W191",   # ignore this to allow tabs
	"EXE002", # The file is executable but no shebang is present	
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
	"D",
	"S101",
	"E402",
	"ERA001",
	"SLF001",  # Private method access is fine for tests
	"PLR2004", # Magic value used in comparison,
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.attestationcheck]
format = "simple"             # Output format (e.g., "json", "csv", etc.)
requirements_paths = []       # List of filenames to read from
groups = []                   # List of selected groups
extras = []                   # List of selected extras
file = ""                     # Output file (leave empty for stdout)
skip_dependencies = []        # Dependencies to skip (compatibility = True)
hide_output_parameters = []   # Parameters to hide from output
show_only_failing = false     # Show only incompatible/failing packages
pypi_api = "https://pypi.org" # Custom PyPI API endpoint
zero = false                  # Return non-zero exit code 


[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py314
	py313
	py312


[testenv]
deps = pytest
commands = pytest tests
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
